Enhance sidebar and header components: add z-index for improved layering and fixed positioning

--- a/Admin/src/App.css
+++ b/Admin/src/App.css
@@ -236,3 +236,7 @@ input[type="text"]:disabled, input[type="email"]:disabled {
     width: 100% !important;
     margin-left: 10px !important;
 }
+
+.contentRight{ 
+    padding-top: 70px !important;
+}
